--- a/src/templates/pokemon.css
+++ b/src/templates/pokemon.css
@@ -85,3 +85,15 @@
     white-space: nowrap;
     text-align: right;
 }
+
+.pieChartContainer {
+    width: 80%;
+    padding: 1rem;
+    margin: 2rem auto;
+    padding: 0.5em 1em;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
